# the-file-tool

./: Readme.md  main.py  pyproject.toml
app/file_tool/src/: Dependencies.txt  audio_conversion.py  convert_handler.py  test.py
app/file_tool/src/converters/: data_conversion.py  document_conversion.py  image_conversion.py
